[metadata]
name = nml
version = 0.7.5
description = An OpenTTD NewGRF compiler for the nml language
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/OpenTTD/nml
author = NML Development Team
author_email = nml-team@openttdcoop.org
license = GPL-2.0+
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License (GPL)
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Compilers

[options]
packages = nml,nml.actions,nml.ast,nml.editors,nml.expression,nml.generated
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.3.0
install_requires =
  Pillow>=3.4
  ply

[options.entry_points]
console_scripts =
  nmlc = nml.main:run
